--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,7 @@ name: CI
 on:
   push:
     branches: [main]
+    tags: ['v*']
   pull_request:
 
 permissions:
@@ -26,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -e ".[dev]"
+        pip install -e .[dev]
 
     - name: Run Black
       run: black --check src/
@@ -56,19 +57,25 @@ jobs:
           python -m pip install --upgrade pip
           pip install -e ".[docs]"
 
-      - name: Build versioned docs
-        run: sphinx-multiversion docs/source docs/build/html
+      - name: Build documentation
+        working-directory: docs
+        run: |
+          make clean
+          make html
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/build/html/main
+          publish_dir: docs/build/html
 
   publish:
     if: startsWith(github.ref, 'refs/tags/v')
     needs: [ test, docs ]
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write  # required for OIDC
+      contents: read
 
     steps:
       - uses: actions/checkout@v4
@@ -81,13 +88,10 @@ jobs:
       - name: Install build tools
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[dev]"
+          pip install -e .[dev]
 
       - name: Build package
         run: python -m build
 
-      - name: Publish to PyPI
-        env:
-          TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
-        run: twine upload dist/*
+      - name: Publish to PyPI using Trusted Publisher
+        uses: pypa/gh-action-pypi-publish@release/v1
